Ensure that bash's mkbuiltins won't pollute HAIKU_TOP.

Introduces a commandline option to specify the filename of the
temp_struct_filename, allowing the buildsystem to place it on the same volume
as HAIKU_OUTPUT_DIR. Fixes #6746.