src/bin/bash/builtins/mkbuiltins.c
@@ -221,6 +221,8 @@ main (argc, argv)
 
       if (strcmp (arg, "-externfile") == 0)
 	extern_filename = argv[arg_index++];
+      else if (strcmp (arg, "-tempstructfile") == 0)
+	temp_struct_filename = argv[arg_index++];
       else if (strcmp (arg, "-structfile") == 0)
 	struct_filename = argv[arg_index++];
       else if (strcmp (arg, "-noproduction") == 0)
@@ -287,8 +289,11 @@ main (argc, argv)
       /* Open the files. */
       if (struct_filename)
 	{
-	  temp_struct_filename = xmalloc (15);
-	  sprintf (temp_struct_filename, "mk-%ld", (long) getpid ());
+	  if (!temp_struct_filename)
+	  {
+	    temp_struct_filename = xmalloc (15);
+	    sprintf (temp_struct_filename, "mk-%ld", (long) getpid ());
+	  }
 	  structfile = fopen (temp_struct_filename, "w");
 
 	  if (!structfile)
